devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glowdesk-prod
  labels:
    name: glowdesk-prod
